--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: center_webview
 description: A new Flutter package for web. Keeps your contents in the center of the screen and adjusts to the responsive change in size.
 version: 0.0.1
-homepage:
+homepage: https://github.com/ajith-m-doodlebug/center_webview.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
